# actix_sqlx_mysql_user_crud

./: .env  .gitignore  Cargo.toml  README.md  config.json  logcfg.yaml  schema.sql
doc/: claims.csv  jwt.md
migrations/: 20231124025150_schema.sql
src/: config.rs  lib.rs  main.rs
src/controller/: group_controller.rs  index_controller.rs  mod.rs  realm_controller.rs  role_controller.rs  user_controller.rs
src/dao/: db_context.rs  group_dao.rs  mod.rs  realm_dao.rs  role_dao.rs  user_dao.rs  user_to_group_dao.rs  user_to_role_dao.rs
src/model/: count.rs  group.rs  mod.rs  password.rs  realm.rs  role.rs  user.rs
test_resource/: config.test.json
tests/: test.rs
tests/controller_test/: group_controller_test.rs  user_controller_test.rs
tests/dao_test/: db_context_test.rs  group_dao_test.rs  mod.rs  role_dao_test.rs  user_dao_test.rs  user_to_group_dao_test.rs  user_to_role_dao_test.rs
