[package]
name = "sqlx_user_crud"
version = "0.1.0"
authors = ["james.meyer"]
edition = "2018"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
dotenvy = "0.15.7"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
serde = "1.0.185"
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
log4rs = { version = "1.2.0" }
log = "0.4.20"
argon2 = "0.5.2"