[package]
name = "sqlx_user_crud"
version = "0.1.0"
authors = ["james.meyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio"] }
serde = "1.0.185"
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
